Atualização do site: [descrição da mudança]

--- a/static/css/estilo.css
+++ b/static/css/estilo.css
@@ -1,7 +1,7 @@
 body {
     margin: 0;
     font-family: 'Segoe UI', sans-serif;
-    background: linear-gradient(to bottom right, #000000, #8B0000);
+    background: linear-gradient(to bottom right, #100c0c, #2e2020);
     color: white;
     text-align: center;
     display: flex;
